# lemsvxl-shock-computation

./: README.md
dbsk2d-ishock-computation/: CMakeLists.txt  README.md  compute_ishock_main.cpp  dbsk2d_compute_ishock_process.cpp  dbsk2d_load_isf_process.cpp  dbsk2d_load_isf_process.h  dbsk2d_save_isf_process.cpp  dbsk2d_save_isf_process.h  dbsk2d_save_osf_process.cpp  dbsk2d_save_osf_process.h
dbsk2d-ishock-computation/bpro1/: bpro1_parameters.h  bpro1_storage.cxx
dbsk2d-ishock-computation/dbgl/: dbgl_eno_curve.h  dbgl_poly_curve_line.h
dbsk2d-ishock-computation/dbgrl/: dbgrl_edge.txx  dbgrl_graph.txx
dbsk2d-ishock-computation/dborl/: dborl_algo_params_base.cxx  dborl_evaluation.cxx  dborl_evaluation.h  dborl_image_description.h  dborl_image_description_utils.cxx  dborl_image_description_utils.h
dbsk2d-ishock-computation/dbsk2d/: dbsk2d_bnd_contour_sptr.h  dbsk2d_bnd_edge.h  dbsk2d_bnd_utils.h  dbsk2d_boundary.h  dbsk2d_boundary_sptr.h  dbsk2d_distance.h  dbsk2d_file_io.cxx  dbsk2d_ishock_arcarc.cxx  dbsk2d_ishock_arcarc_thirdorder.h  dbsk2d_ishock_belm.h  dbsk2d_ishock_bline.cxx  dbsk2d_ishock_bline.h  dbsk2d_ishock_bnd_key.h  dbsk2d_ishock_bpoint.h  dbsk2d_ishock_contact.cxx  dbsk2d_ishock_edge.cxx  dbsk2d_ishock_edge.h  dbsk2d_ishock_elm.h  dbsk2d_ishock_graph_sptr.h  dbsk2d_ishock_linearc.cxx  dbsk2d_ishock_linearc.h  dbsk2d_ishock_lineline.h  dbsk2d_ishock_node.cxx  dbsk2d_ishock_node.h  dbsk2d_ishock_pointline.cxx  dbsk2d_ishock_pointline.h  dbsk2d_ishock_pointpoint.cxx  dbsk2d_ishock_pointpoint.h  dbsk2d_lagrangian_cell_bnd.cxx  dbsk2d_lagrangian_cell_bnd_sptr.h  dbsk2d_shock_edge_sptr.h  dbsk2d_shock_fragment.cxx  dbsk2d_shock_graph.cxx  dbsk2d_shock_grouped_ishock_edge.cxx  dbsk2d_shock_grouped_ishock_edge.h  dbsk2d_shock_node.h  dbsk2d_transform_manager.cxx  dbsk2d_utils.cxx  dbsk2d_xshock_node.cxx  dbsk2d_xshock_node.h  (+1 more)
dbsk2d-ishock-computation/dbsol/: dbsol_file_io.cxx  dbsol_interp_curve_2d.h  dbsol_interp_curve_2d_sptr.h
dbsk2d-ishock-computation/params/: vbl_smart_ptr+vox_compute_ishock_params-.cxx  vox_compute_ishock_params.cxx  vox_compute_ishock_params.h  vox_compute_ishock_params_sptr.h
dbsk2d-xshock-computation/: CMakeLists.txt  README.md  compute_xshock_main.cpp  dbsk2d_compute_ishock_process.cpp
dbsk2d-xshock-computation/bpro1/: bpro1_parameters.cxx  bpro1_process.h
dbsk2d-xshock-computation/dbgl/: dbgl_arc.h  dbgl_arc_base.h  dbgl_eulerspiral_base.h  dbgl_poly_curve.h
dbsk2d-xshock-computation/dbgrl/: dbgrl_vertex.txx
dbsk2d-xshock-computation/dborl/: dborl_algo_params_base.h  dborl_algo_params_base_sptr.h  dborl_image_description.cxx
dbsk2d-xshock-computation/dbsk2d/: dbsk2d_base_gui_geometry.h  dbsk2d_bnd_cell.cxx  dbsk2d_bnd_contour.h  dbsk2d_bnd_edge.cxx  dbsk2d_bnd_utils.cxx  dbsk2d_bnd_vertex.h  dbsk2d_bnd_vertex_sptr.h  dbsk2d_boundary.cxx  dbsk2d_boundary.h  dbsk2d_containment_node_sptr.h  dbsk2d_distance.cxx  dbsk2d_exception.cxx  dbsk2d_file_io.h  (+33 more)
osf-to-esf/: CMakeLists.txt  README.md  dbsk2d_compute_ishock_process.h  dbsk2d_load_osf_process.cpp  dbsk2d_load_osf_process.h  osf_to_esf_main.cpp
osf-to-esf/bpro1/: bpro1_parameters.txx
osf-to-esf/bpro1/Templates/: bpro1_parameters+bpro_filepath-.cxx  bpro1_parameters+int-.cxx  bpro1_parameters+vcl_string-.cxx  vbl_smart_ptr+bpro1_process-.cxx  vbl_smart_ptr+bpro1_storage-.cxx  vsl_binary_loader+bpro1_storage-.cxx
osf-to-esf/dbgl/algo/: dbgl_eulerspiral.cxx  dbgl_eulerspiral.h
osf-to-esf/dbnl/algo/: dbnl_eno.cxx
osf-to-esf/dborl/: dborl_parameter.cxx  dborl_parameter.h
osf-to-esf/dborl/Templates/: vbl_smart_ptr+dborl_description_base-.cxx  vbl_smart_ptr+dborl_exp-stat-.cxx  vbl_smart_ptr+dborl_image_data_description_base-.cxx  vbl_smart_ptr+dborl_image_mask_description-.cxx  vbl_smart_ptr+dborl_image_polygon_description-.cxx
osf-to-esf/dborl/algo/: dborl_utilities.cxx  dborl_utilities.h
osf-to-esf/dbsk2d/: compute_ishock_main.cpp  dbsk2d_assert.cxx  dbsk2d_assert.h  dbsk2d_bnd_cell.h  dbsk2d_bnd_cell_sptr.h  dbsk2d_bnd_contour.cxx  dbsk2d_bnd_edge_sptr.h  dbsk2d_bnd_vertex.cxx  dbsk2d_containment_node.cxx  dbsk2d_containment_node.h  dbsk2d_defines.h  dbsk2d_exception.h  dbsk2d_fuzzy_boolean.h  dbsk2d_geometry_utils.cxx  dbsk2d_ishock_arcarc.h  dbsk2d_ishock_belm.cxx  dbsk2d_ishock_bnd_key.cxx  dbsk2d_ishock_contact.cxx  dbsk2d_ishock_contact.h  dbsk2d_ishock_edge.cxx  dbsk2d_ishock_edge.h  dbsk2d_ishock_graph.cxx  dbsk2d_ishock_lineline.cxx  dbsk2d_ishock_lineline.h  dbsk2d_ishock_lineline_thirdorder.h  dbsk2d_ishock_node.h  dbsk2d_ishock_pointarc_thirdorder.cxx  dbsk2d_ishock_pointline.cxx  dbsk2d_ishock_pointline.h  dbsk2d_ishock_pointpoint.cxx  dbsk2d_ishock_pointpoint.h  dbsk2d_ishock_utils.h  dbsk2d_lagrangian_cell_bnd.h  dbsk2d_rich_map.cxx  dbsk2d_rich_map.h  dbsk2d_rich_map_sptr.h  dbsk2d_shock_edge.h  dbsk2d_shock_fragment.h  dbsk2d_shock_graph.h  dbsk2d_shock_grouped_ishock_edge_sptr.h  (+4 more)
osf-to-esf/dbsk2d/Templates/: dbgrl_vertex+dbsk2d_shock_edge-.cxx  vbl_smart_ptr+dbsk2d_bnd_cell-.cxx  vbl_smart_ptr+dbsk2d_shock_fragment-.cxx  vbl_smart_ptr+dbsk2d_shock_graph-.cxx  vtol_list_functions+dbsk2d_bnd_edge~-.cxx
osf-to-esf/dbsk2d/algo/: dbsk2d_bnd_preprocess_lines_vs_arcs.cxx  dbsk2d_bnd_preprocess_points.cxx  dbsk2d_ishock_compute_intersection.cxx  dbsk2d_ishock_transform.h  dbsk2d_lagrangian_ishock_detector_prop.cxx  dbsk2d_prune_ishock.cxx  dbsk2d_sample_ishock.cxx  dbsk2d_sample_ishock.h  dbsk2d_shock_transforms.cxx  dbsk2d_shock_transforms.h  dbsk2d_xshock_graph_fileio.cxx
osf-to-esf/dbsk2d/pro/: dbsk2d_sample_ishock_process.cxx  dbsk2d_sample_ishock_process.h  dbsk2d_save_esf_process.cxx  dbsk2d_save_esf_process.h  dbsk2d_shock_storage.h  dbsk2d_shock_storage_sptr.h
osf-to-esf/dbsol/: dbsol_curve_algs.cxx
osf-to-esf/params/: vox_compute_ishock_params.cxx  vox_compute_ishock_params.h
osf-to-esf/vidpro1/Templates/: vsl_map_io+vcl_string.vcl_vector+bpro1_storage_sptr--.cxx  vsl_map_io+vcl_string.vcl_vector+double--.cxx
osf-to-esf/vidpro1/pro/: vidpro1_load_cem_process.cxx
osf-to-esf/vidpro1/storage/: vidpro1_image_storage.h
(+83 files in other folders)
